[gd_scene load_steps=4 format=2]

[ext_resource path="res://bottle.png" type="Texture" id=1]
[ext_resource path="res://scenes/gameplay/Potion.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1080.0
height = 560.0

[node name="Potion" type="Node2D"]
visible = false
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Bottle" type="Sprite" parent="." groups=["potions"]]
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 1 )

[node name="BottleShape" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottleShape"]
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 1 )

[node name="GoUpTween" type="Tween" parent="."]
playback_speed = 3.0
playback/speed = 3.0

[node name="GoDownTween" type="Tween" parent="."]
playback_speed = 3.0
playback/speed = 3.0

[connection signal="area_entered" from="BottleShape" to="." method="_on_BottleShape_area_entered"]
[connection signal="body_entered" from="BottleShape" to="." method="_on_BottleShape_body_entered"]
[connection signal="body_exited" from="BottleShape" to="." method="_on_BottleShape_body_exited"]
[connection signal="tween_completed" from="GoUpTween" to="." method="_on_GoUpTween_tween_completed"]
[connection signal="tween_all_completed" from="GoDownTween" to="." method="_on_GoDownTween_tween_all_completed"]
